--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,13 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
+    numpy
+    pandas
+    folium
+    geopy
+    scipy
+    plotly
+    matplotlib
 
 
 [options.packages.find]
